# HDScanner

./: .env  .env.example  .gitignore  CLAUDE.md  PRD.md  README.md  SPEC.md  TASKS.md  compass_artifact_wf-1dda5335-81d8-4947-a52a-c05d03de3b39_text_markdown.md  pyproject.toml
queries/: searchModel.graphql
src/hd/: cli.py  config.py  grouping.py  logging.py
src/hd/dashboard/: __init__.py  _state.py  app.py  pipeline_runner.py  queries.py
src/hd/dashboard/components/: charts.py  formatters.py  header.py
src/hd/dashboard/pages/: alerts.py  overview.py  products.py  stores.py
src/hd/db/: base.py  models.py
src/hd/hd_api/: graphql.py  models.py  parsers.py
src/hd/http/: client.py  rate_limit.py
src/hd/notifiers/: formatter.py  webhook.py
src/hd/pipeline/: alerts.py  diff.py  discovery.py  health.py  snapshot.py
tests/: conftest.py  test_alert_grouping.py  test_api_error_detection.py  test_dashboard_formatters.py  test_dashboard_queries.py  test_diff.py  test_health.py  test_notify_formatter.py  test_parsers.py  test_pipeline_runner.py  test_prune.py
tests/fixtures/: sample_searchModel_response.json
