[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hd-clearance-monitor"
version = "0.1.0"
description = "Home Depot clearance monitor for Milwaukee M12/M18 tools"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "aiosqlite",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "structlog>=24.0",
    "rich",
]

[project.optional-dependencies]
postgres = ["asyncpg"]
dashboard = ["nicegui>=2.0"]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
]

[project.scripts]
hd = "hd.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
